# ToolClad

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  TOOLCLAD_DESIGN_SPEC.md  context7.json  toolclad.toml  zensical.toml
.github/workflows/: docs.yml
docs/: api-reference.md  browser-mode.md  cli-reference.md  command-construction.md  getting-started.md  http-mcp-backends.md  index.md  llm-integration.md  manifest-format.md  output-evidence.md  schemapin-v1.4-features.md  security-model.md  session-mode.md  symbiont-integration.md  type-system.md
examples/: curl_fetch.clad.toml  dig_lookup.clad.toml  nikto_scan.clad.toml  nmap_scan.clad.toml  whois_lookup.clad.toml
go/: go.mod
go/cmd/toolclad/: main.go
go/pkg/executor/: executor.go  executor_test.go
go/pkg/manifest/: custom_types.go  manifest.go  manifest_test.go
go/pkg/validator/: validator.go  validator_test.go
js/: README.md  package-lock.json  package.json
js/src/: cli.js  executor.js  index.js  manifest.js  validator.js
js/test/: executor.test.js  extended_types.test.js  session_browser.test.js  validator.test.js
python/: pyproject.toml
python/tests/: test_executor.py  test_session_browser.py  test_validator.py
python/toolclad/: __init__.py  cli.py  executor.py  manifest.py  validator.py
rust/: Cargo.toml
rust/src/: executor.rs  lib.rs  main.rs  types.rs  validator.rs
tests/: scope_vectors.json
