[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "toolclad"
version = "0.4.0"
description = "Reference implementation of the ToolClad declarative tool interface executor"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ThirdKey AI"},
]
dependencies = [
    "tomli>=1.1.0; python_version < '3.11'",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
toolclad = "toolclad.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
