[package]
name = "toolclad"
version = "0.1.0"
edition = "2021"
description = "Reference implementation of the ToolClad declarative CLI tool interface executor"
license = "MIT"

[[bin]]
name = "toolclad"
path = "src/main.rs"

[lib]
name = "toolclad"
path = "src/lib.rs"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
