[package]
name = "toolclad"
version = "0.4.0"
edition = "2021"
authors = ["Jascha Wanger / ThirdKey.ai"]
description = "Declarative CLI tool interface contracts for agentic runtimes — manifest parser, argument validator, command executor"
license = "MIT"
repository = "https://github.com/ThirdKeyAI/ToolClad"
homepage = "https://github.com/ThirdKeyAI/ToolClad"
readme = "../README.md"
keywords = ["ai", "agents", "tools", "security", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "toolclad"
path = "src/main.rs"

[lib]
name = "toolclad"
path = "src/lib.rs"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
